@@ -65,15 +65,11 @@ jlink \
   --add-modules jdk.jsobject \
   --add-modules jdk.localedata \
   --add-modules jdk.management \
-  --add-modules jdk.management.agent \
   --add-modules jdk.management.jfr \
   --add-modules jdk.naming.dns \
-  --add-modules jdk.naming.ldap \
   --add-modules jdk.naming.rmi \
   --add-modules jdk.net \
-  --add-modules jdk.pack \
   --add-modules jdk.scripting.nashorn \
-  --add-modules jdk.scripting.nashorn.shell \
   --add-modules jdk.sctp \
   --add-modules jdk.security.auth \
   --add-modules jdk.security.jgss \
@@ -81,15 +77,15 @@ jlink \
   --add-modules jdk.xml.dom \
   --add-modules jdk.zipfs
 
-cp native/build-aarch64/src/Release/RuneLite.exe build/win-aarch64/
+cp native/build-aarch64/src/Release/Eldritch.exe build/win-aarch64/
 cp target/Eldritch.jar build/win-aarch64/
 cp packr/win-aarch64-config.json build/win-aarch64/config.json
 cp liblauncher/buildaarch64/Release/launcher_aarch64.dll build/win-aarch64/
 
-echo RuneLite.exe aarch64 sha256sum
-sha256sum build/win-aarch64/RuneLite.exe
+echo Eldritch.exe aarch64 sha256sum
+sha256sum build/win-aarch64/Eldritch.exe
 
-dumpbin //HEADERS build/win-aarch64/RuneLite.exe
+dumpbin //HEADERS build/win-aarch64/Eldritch.exe
 
 # We use the filtered iss file
 iscc target/filtered-resources/runeliteaarch64.iss
